# rust7tv

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
migrations/: 20240129000000_init_schema.sql  20260204000000_create_stickers_table.sql
src/: main.rs
src/config/: mod.rs
src/models/: mod.rs
src/routes/: dashboard.html  dashboard.rs  mod.rs
src/services/: mod.rs
src/services/cache/: mod.rs
src/services/seventv/: mod.rs
src/services/storage/: mod.rs
