[package]
name = "rust-gokeki"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp"] }
azure_storage_blobs = "0.21"
azure_storage = "0.21"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
regex = "1.10"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
